// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders col-6 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(6, 1fr);
}

<div
  class="c0"
  data-class="grid-6"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
  <div>
    col 3
  </div>
  <div>
    col 4
  </div>
  <div>
    col 5
  </div>
  <div>
    col 6
  </div>
</div>
`;

exports[`Grid renders col-auto 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
  grid-template-columns: repeat(1, auto);
}

<div
  class="c0"
  data-class="grid-[repeat(1, auto)]"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Grid renders grid default 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
}

<div
  class="c0"
  data-class=""
  data-grid="grid"
>
  col
</div>
`;
